index page works... almost

--- a/views/index.html
+++ b/views/index.html
@@ -3,4 +3,12 @@
 {% block content %}
     <h1>{{title}}</h1>
     <p>Welcome to {{title}}</p>
+
+	<ul>
+		{% for doc in docs %}
+		<li>
+			<a href='{{doc.full_url}}'>{{doc.title}}</a>
+		</li>
+		{% endfor %}
+	</ul>
 {% endblock %}
