--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,16 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1>{{title}}</h1>
-    <p>Welcome to {{title}}</p>
+  <h1>{{title}}</h1>
+  <p>Welcome to {{title}}</p>
 
-	<ul>
-		{% for doc in docs %}
-		<li>
-			<a href='{{doc.full_url}}'>{{doc.title}}</a>
-		</li>
-		{% endfor %}
-	</ul>
+  {% if docs.length > 0 %}
+     <ul>
+       {% for doc in docs %}
+          <li>{{ doc|page_link }}</li>
+       {% endfor %}
+    </ul>
+  {% else %}
+    There are no pages. Why don't you <a href='/add'>add one</a>?
+  {% endif %}
 {% endblock %}
