--- a/views/layout.html
+++ b/views/layout.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-  
+
   	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3	.5/css/bootstrap.min.css">
 
 	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <title></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
