--- a/views/layout.html
+++ b/views/layout.html
@@ -13,6 +13,19 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
+    <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">WikiStack</a>
+      </div>
+      <div>
+        <ul class="nav navbar-nav">
+          <li><a href="/add">Add Page</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   	<div class="container">
     {% block content %}{% endblock %}
   	</div>
