Almost working with tags! Need all tags links page.

--- a/views/layout.html
+++ b/views/layout.html
@@ -5,9 +5,15 @@
   	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3	.5/css/bootstrap.min.css">
 
-	<!-- Latest compiled and minified JavaScript -->
+	<!-- Latest compiled and minified jQuery -->
 	  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+  <!-- Latest compiled and minified bootstrap -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <!-- For tag cloud -->
+  <script src="assets/js/bootstrap-tag-cloud.js"></script>
+  <link href="assets/css/bootstrap-tag-cloud.css" rel="stylesheet">
 
     <title></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
