--- a/views/addpage.html
+++ b/views/addpage.html
@@ -11,6 +11,10 @@
     <label for="pageContent">Page Content</label>
     <textarea name="pageContent" id="pageContent" class="form-control"></textarea>
   </div>
+  <div class="form-group">
+    <label for="pageTags">Tags</label>
+    <input type="text" class="form-control"  name="pageTags"  id="pageTags" placeholder="Enter comma-separated tags">
+  </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
 
